--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -205,8 +205,10 @@
     font-family: 'Courier New', Courier, monospace;
     color: #fff;
     margin-top: 20px;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     text-align: center;
+    width: auto;
+    height: auto;
 }
 .projects {
     display: flex;
@@ -215,6 +217,7 @@
     flex-wrap: wrap;
     gap: 30px;
     height: auto;
+    width: auto;
 }
 a:link {
     color: white;
@@ -226,7 +229,6 @@ a:hover {
     color: #00ccff;
 }
 .image-1{
-    filter:brightness(90%);
     content:url(../src/assets/calc.png);
 }
 .image-2 {
@@ -388,19 +390,28 @@ a:hover {
 }
 
 
-@media only screen and (max-width: 600x) {
+@media only screen and (max-width: 600px) {
     .main-text {
-        font-size: .5rem;
+        font-size: 2.5rem;
     }
     .main-text2 {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
     }
     .logo {
-        font-size: .9rem;
+        font-size: 1.2rem;
     }
     .nav-bar {
-        justify-content: right;
-        font-size: .6rem;
-        gap: 5px;
+        font-size: .8rem;
+    }
+    #project-item {
+        width: 90vw;
+    }
+    .about-section {
+        display: flex;
+        padding-top: 100px;
+        flex-direction: column;
+        margin-left: 100px;
+        margin-right: 100px;
+        padding-bottom: 100px;
     }
 }
