--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -359,14 +359,14 @@ a:hover {
     color: #00ccff;
     text-align: center;
 }
-.contact-1 {
-    background: url(../src/assets/icons/email-1573-svgrepo-com.svg);
-    width: 70px;
-    height: 70px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+// .contact-1 {
+//     background: url(../src/assets/icons/email-1573-svgrepo-com.svg);
+//     width: 70px;
+//     height: 70px;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+// }
 .contact-2 {
     background: url(../src/assets/icons/github-142-svgrepo-com.svg);
     width: 70px;
