--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: column;
     width: 60vw;
-    height: 60vh;
+    height: auto;
     margin-top: 6vh;
     color: #fff;
 }
@@ -64,7 +64,7 @@
     width: 30vw;
 }
 .main-text2 {
-    margin-top: 70px;
+    padding-top: 70px;
     letter-spacing: 0px;
     font-size: 2rem;
     animation: fadeIn 1.2s 1s both;
@@ -199,7 +199,7 @@
 .project-info {
     font-family: 'Courier New', Courier, monospace;
     color: #fff;
-    margin-top: 20px;
+    padding-top: 20px;
     font-size: 1.1rem;
     text-align: center;
     width: auto;
@@ -359,14 +359,7 @@ a:hover {
     color: #00ccff;
     text-align: center;
 }
-// .contact-1 {
-//     background: url(../src/assets/icons/email-1573-svgrepo-com.svg);
-//     width: 70px;
-//     height: 70px;
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     background-size: cover;
-// }
+
 .contact-2 {
     background: url(../src/assets/icons/github-142-svgrepo-com.svg);
     width: 70px;
@@ -385,7 +378,7 @@ a:hover {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 360px) {
     .main-text {
         font-size: 2.5rem;
     }
