--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -7,8 +7,8 @@
 .bg-image {
     z-index: -1;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-image: url('assets/su-san-lee-E_eWwM29wfU-unsplash\(2\).jpg');
     background-attachment: fixed;
     background-position: center;
