--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -380,19 +380,27 @@ a:hover {
 
 @media only screen and (max-width: 360px) {
     .main-text {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
     }
     .main-text2 {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
     .logo {
         font-size: 1.2rem;
     }
     .nav-bar {
-        font-size: .8rem;
+        font-size: .7rem;
+        padding-right: 50px;
+        gap: 10px;
+    }
+    .link {
+        font-size: 1rem;
     }
     #project-item {
-        width: 90vw;
+        width: 70vw;
+    }
+    .project-info {
+        font-size: .65rem;
     }
     .about-section {
         display: flex;
