--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -84,7 +84,7 @@
 .nav-bar {
     z-index: 3;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    width: 50vw;
+    width: 40vw;
     display: flex;
     justify-content: space-around;
     list-style: none;
@@ -402,17 +402,21 @@ a:hover {
         font-size: 1rem;
     }
     #project-item {
+        display: absolute;
         width: 70vw;
     }
     .project-info {
-        font-size: .6rem;
+        font-size: 1rem;
+    }
+    .nav-bar {
+        padding-right: 10px;
     }
     .about-section {
         display: flex;
         padding-top: 100px;
         flex-direction: column;
-        margin-left: 100px;
-        margin-right: 100px;
+        margin-left: 5vw;
+        margin-right: 5vw;
         padding-bottom: 100px;
     }
 }
