--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -55,7 +55,7 @@
     flex-direction: column;
     width: 60vw;
     height: auto;
-    margin-top: 6vh;
+    padding-top: 6vh;
     color: #fff;
 }
 .main-text {
@@ -387,7 +387,7 @@ a:hover {
 }
 
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 460px) {
     .main-text {
         font-size: 2.3rem;
     }
@@ -413,7 +413,7 @@ a:hover {
         font-size: 1rem;
     }
     .nav-bar {
-        padding-right: 15vw;
+        margin-right: 10vw;
     }
     .about-section {
         display: flex;
