-changed project styles

--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -407,10 +407,10 @@ a:hover {
         font-size: 1rem;
     }
     #project-item {
-        width: 85vw;
+        width: 90vw;
     }
     .project-info {
-        font-size: 1rem;
+        font-size: .8rem;
     }
     .nav-bar {
         margin-right: 10vw;
