-added new project

--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -244,6 +244,9 @@ a:hover {
 .image-5 {
     content:url(../src/assets/memory.png);
 }
+.image-6 {
+    content:url(../src/assets/shop.jpg);
+}
 
 .tech-container {
     background: #111;
